js/js.translator/testData/incremental/invalidation/typeScriptExports/lib2/l2.6.kt
@JsExport
class MyClass(konst stepId: Int) {
    @JsName("bar")
    fun qux() = foo() + stepId
}

